--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.8.4",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
@@ -27,7 +28,7 @@
     "delay": 2500,
     "env": {
       "NODE_ENV": "development",
-        "PORT": 4000
+      "PORT": 4000
     }
   }
 }
